# kline_data

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  QUICKSTART.md  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
cli/: main.py
config/: __init__.py  config.yaml  manager.py  schemas.py
docs/: CONSTANTS_REFACTORING_SUMMARY.md  DataFeed_SDK使用文档.md  IMPLEMENTATION_COMPLETE.md  REFACTORING_SUMMARY.md  SDK_USER_MANUAL.md  TEST_ANALYSIS_REPORT.md  config_guide.md  constants_api_reference.md  constants_documentation_index.md  constants_migration_guide.md  data_feed_guide.md  external_usage.md  global_constants_guide.md  project_summary.md  validation_report.md
examples/: best_practices_constants.py  cli_example.sh  cli_validate_example.sh  config_example.py  data_feed_example.py  data_range_handling_example.py  demo_get_klines_before.py  download_with_progress.py  example_get_klines_before.py  example_overlap_download.py  external_usage_advanced.py  external_usage_simple.py  indicators_enhanced_demo.py  indicators_example.py  reader_example.py  resampler_example.py  sdk_refactored_example.py  smart_fetch_example.py  storage_example.py  task_management_example.py  task_management_example.sh  test_auto_earliest.py  timeframe_example.py  validate_example.py
indicators/: CHANGELOG.md  README.md  __init__.py  base.py  manager.py  moving_average.py  rsi.py  talib_adapter.py  utils.py  volatility.py
kline_data/: __init__.py
reader/: __init__.py  cache.py  parquet_reader.py  query_engine.py
resampler/: __init__.py  kline_resampler.py  timeframe.py
scripts/: diagnose_talib.py  fix_imports.py  gradual_fix.py  quick_test.py  reorganize_storage.py  test_new_storage_structure.py  validate_fixes.sh  verify_refactoring.py  verify_sandisk_data.py
(+146 files in other folders)
