[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kline-data"
version = "1.0.0"
description = "本地K线数据存储系统 - 支持CCXT数据源和多周期重采样"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["kline", "candlestick", "ccxt", "trading", "cryptocurrency", "parquet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "fastparquet>=2023.0.0",
    "polars>=0.18.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "inquirer>=3.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "aiofiles>=23.0.0",
    "ta-lib>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/kline-data"

[project.scripts]
kline = "kline_data.cli.main:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kline_data*"]

[tool.setuptools.package-data]
kline_data = ["config/*.yaml", "config/*.yml"]
